# remarkable_simplenote

./: README.md  pyproject.toml  setup.cfg
remarkable_simplenote/: conf.py  main.py  remarkable.py  simplenote.py  sync.py  utils.py
