[metadata]
name = remarkable_simplenote
version = 1
description = Sync reMarkable and Simplenote
long_description = file: README.md

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires = 
    simplenote >= 2.1.4
    rmapy >= 0.2.3

[options.entry_points]
console_scripts =
    remarkable_simplenote=remarkable_simplenote.main:main
